Fixed horizontal line stretching to the end of the container on its right side

--- a/public/sass/components/updateUserSettings.scss
+++ b/public/sass/components/updateUserSettings.scss
@@ -315,3 +315,7 @@ $body: "Roboto", sans-serif;
   margin-top: 4rem;
   font-family: Bitter;
 }
+
+.user_settings_divider {
+  margin-right: 5rem;
+}
